# Ankr-Decay-v2

./: README.md
Ankr/: CMakeLists.txt  main.cpp
Ankr/MindEngine/Asset/image/: game_images.cpp  game_images.hpp
Ankr/MindEngine/Asset/sound/: game_music.cpp  game_music.hpp
Ankr/MindEngine/Core/debug/: ankr_debug.cpp  ankr_debug.hpp
Ankr/MindEngine/Core/graphics/animation/: animation_system.cpp  animation_system.hpp
Ankr/MindEngine/Core/graphics/object/: object_system.cpp  object_system.hpp
Ankr/MindEngine/Core/physics_rules/: physics_manager.cpp  physics_manager.hpp
Ankr/MindEngine/Core/player_inputs/: input_manager.cpp  input_manager.hpp
Ankr/MindEngine/Game/board/: game_map.cpp  game_map.hpp
Ankr/MindEngine/Game/define_character/: base_character.hpp
Ankr/MindEngine/Game/define_character/base/: hero_base.hpp  villain_base.hpp
Ankr/MindEngine/Game/define_character/bots/: villains.cpp  villains.hpp
Ankr/MindEngine/Game/define_character/characters/: heroes.cpp  heroes.hpp
Ankr/MindEngine/Game/main/: decay.cpp  decay.hpp
MindLauncher/src/main/java/: module-info.java
MindLauncher/src/main/java/org/example/mindlauncher/: GameController.java  Main.java  MainController.java
MindLauncher/src/main/resources/org/example/mindlauncher/: game-view.fxml  launcher-view.css  launcher-view.fxml
